fixed footer + added content-box to education

--- a/education.html
+++ b/education.html
@@ -23,6 +23,7 @@
         <a href="index.html"><img src="photo/my-logo.png" alt="website logo"></a>
     </div>
 
+<div class="content-box">
     <article>
         <h2> Education & Experience</h2>
         <ul>
@@ -44,6 +45,7 @@
             
         </ul>
     </article>
+</div> 
 
     <hr/>
     <footer>
