github repositories link

--- a/about-me.html
+++ b/about-me.html
@@ -58,7 +58,7 @@
         <div class="social">
             <a href="https://www.instagram.com/nikki.d.ream/" target="_blank" ><img src="photo/instagram-icon.png"  alt="instagram link"></a>
         
-            <a href="https://github.com/NikkiDilling?tab=projects" target="_blank"><img src="photo/github-icon.jpg" alt="github link"></a>
+            <a href="https://github.com/NikkiDilling?tab=repositories" target="_blank"><img src="photo/github-icon.jpg" alt="github link"></a>
         </div>
     </footer>
 
