new back to main header + fixed footer

--- a/education.html
+++ b/education.html
@@ -20,8 +20,10 @@
 <body>
 
     <div class="main-logo">
-        <a href="index.html"><img src="photo/my-logo.png" alt="website logo"></a>
+        <a href="index.html"><img src="photo/me2.jpg" alt="website logo"></a>
+            <h4 class="Welcome">back to main</h4> 
     </div>
+        
 
 <div class="content-box">
     <article>
