info in education + changed article placement in about me

--- a/about-me.html
+++ b/about-me.html
@@ -21,6 +21,19 @@
         </div>
 
     <div class="content-box_about-me">
+
+        
+        <article>
+            <h2> Personal traits </h2>
+
+            <li>Organized</li>
+            <li>Fast learner</li>
+            <li>Good communicator</li>
+            <li>Friendly</li>
+            <li>Open-minded</li>
+            <li>Punctual</li>
+        </article>
+
         <article>
             <h2> Interests </h2>
 
@@ -33,15 +46,6 @@
 
         </article>
 
-        <article>
-            <h2> Personal traits </h2>
-
-            <li>Organized</li>
-            <li>Good communicator</li>
-            <li>Friendly</li>
-            <li>Open-minded</li>
-            <li>Punctual</li>
-        </article>
     </div>
     
     <hr/>
