new header & nav

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&display=swap" rel="stylesheet">
-
     <title>Nikki Dilling-Hansen</title>
 
 
@@ -24,7 +23,7 @@
 
         <div class="Welcome">
             <h1><span>Welcome</span> to my page!</h1>
-            <p>My name is Nikki and I am an aspiring web developer</p>
+            <p>My name is <span> Nikki </span>and I am an aspiring web developer</p>
         </div>
        
 
