--- a/education.html
+++ b/education.html
@@ -37,16 +37,16 @@
     <article>
         <h2> Education</h2>
         <ul>
-            <li>BA in Humanities and technilogies, Roskilde University, Denmark
+            <li>BA in Humanities and Technologies, Roskilde University, Denmark
                  <p>Specialty: Computer Science & Informatics</p> <br>
 
             <ul>
-                <li>BA (Exchange): Sungkyunkwan University, South Korea
+                <li>Exchange: Sungkyunkwan University, South Korea
                     <p>Major: Software</p> <br>
 
                     <p>During my exchange I've been focused on bettering myself.</p>
-                    <p>I learned gained basic and indepth knowledge in the CS field,</p>
-                    <p>focused on my own extracariccular projects. But also learned</p>
+                    <p>I gained basic and indepth knowledge in the CS field,</p>
+                    <p>focused on my own extracurricular projects. But also learned</p>
                     <p>about the Korean culture, people's work/life practices which differ</p>
                     <p>a lot from the western. Furthermore I enjoyed working on my </p>
                     <p>korean communication skills.</p>
