--- a/education.html
+++ b/education.html
@@ -45,11 +45,10 @@
                     <p>Major: Software</p> <br>
 
                     <p>During my exchange I've been focused on bettering myself.</p>
-                    <p>I gained basic and indepth knowledge in the CS field,</p>
-                    <p>focused on my own extracurricular projects. But also learned</p>
-                    <p>about the Korean culture, people's work/life practices which differ</p>
-                    <p>a lot from the western. Furthermore I enjoyed working on my </p>
-                    <p>korean communication skills.</p>
+                    <p>I gained basic and indepth knowledge in the CS field, and</p>
+                    <p>focused on my own extracurricular projects. But also I learned</p>
+                    <p>about the Korean culture, and people's work/life practices, which</p>
+                    <p>motivates me to work further on bettering my skills.</p>
                 </li>
             </ul>
                 </li>
