linkedin link + figma icon + deleted useless items

--- a/about-me.html
+++ b/about-me.html
@@ -67,7 +67,7 @@
         </address>
         
         <div class="social">
-            <a href="https://www.instagram.com/nikki.d.ream/" target="_blank" ><img src="photo/instagram-icon.png"  alt="instagram link"></a>
+            <a href="https://www.linkedin.com/in/nikki-dilling-hansen/" target="_blank" ><img src="photo/linkedin-logo.png"  alt="linkedin link"></a>
         
             <a href="https://github.com/NikkiDilling?tab=repositories" target="_blank"><img src="photo/github-icon.jpg" alt="github link"></a>
         </div>
