--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
           <article class="projects">
                 <h3> Projects </h3>
                 <ul>
-                    <li><a href="index.html">Personal website</a></li>
-                    <li>...Under Construction</li>
+                    <li><a href="index.html" class="project-link">Personal website</a></li>
+                    <li><a href="https://github.com/NikkiDilling/GUI-Retail-store-" class="project-link">GUI Retail Store Order Managment System</a></li>
                 </ul>
             </article>
 
