--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </div> <!--end of container-->
     </header>
 
-
+<!-- Start of main content-->
     <div class="container container-flex container-last">
 
    
