fixed some text

--- a/education.html
+++ b/education.html
@@ -49,7 +49,7 @@
             <div class="article-content">
 
                 <ul>
-                    <li class="article-list-item"> <h3>BA in Humanities and Technologies, Roskilde University, Denmark</h3></li>       
+                    <li class="article-list-item"> <h3>BS in Humanities and Technologies, Roskilde University, Denmark</h3></li>       
                         <ul class="article-sublist">
                             <li class="article-list-item">Specialty: Computer Science & Informatics</li>
                         </ul>                      
