added title icon

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Nanum+Myeongjo:wght@400;700;800&display=swap" rel="stylesheet">
 
     <title>Nikki Dilling-Hansen</title>
-
+    <link rel="icon" href="photo/website-logo.png" type="image/icon type">
 
 </head>
 <body>
