--- a/about-me.html
+++ b/about-me.html
@@ -13,6 +13,8 @@
   
     
     <title>About me</title>
+    <link rel="icon" href="photo/website-logo.png" type="image/icon type">
+    
 </head>
 <body>
     <header>
