--- a/education.html
+++ b/education.html
@@ -13,6 +13,7 @@
   
 
     <title>Education & Experience</title>
+    <link rel="icon" href="photo/website-logo.png" type="image/icon type">
 
 
 </head>
