--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </header>
 
 <!-- Start of main content-->
-    <div class="container container-last">
+    <div class="container container-flex container-last">
 
    
         <main role="main" class="column">
