added js toggle active function. Fix p on untoggle!

--- a/index.html
+++ b/index.html
@@ -57,13 +57,34 @@
                 <h2 class="article-title title-border">Programming Skills</h2>
                 
                     <div class="article-content article-icons">
-                            <img src="photo/html-icon.png" alt="html" id="HTML5" class="icon html-icon">
-                            <img src="photo/css-icon.png" alt="css" id="CSS3" class="icon css-icon"> 
-                            <img src="photo/c-logo.png" alt="c" id="C" class="icon c-icon">
-                            <img src="photo/java-logo.png" alt="java" id="Java"class="icon java-icon">
-                            <img src="photo/git-logo.png" alt="git" id="GIT" class="icon git-icon">
-                            <img src="photo/mysql-logo.png" alt="mysql" id="MySql" class="icon mysql-icon">
-                            <img src="photo/figma-logo.png" alt="figma" id="Figma" class="icon figma-icon">
+                        <div class="content-container">
+                            <img src="photo/html-icon.png" alt="html" id="HTML5" class="html-icon">
+                            <p></p>
+                        </div>
+                        <div class="content-container">
+                            <img src="photo/css-icon.png" alt="css" id="CSS3" class="css-icon"> 
+                            <p></p>
+                        </div>
+                        <div class="content-container">
+                            <img src="photo/c-logo.png" alt="c" id="C" class="c-icon">
+                            <p></p>
+                        </div>
+                        <div class="content-container">
+                            <img src="photo/java-logo.png" alt="java" id="Java"class="java-icon">
+                            <p></p>
+                        </div>
+                        <div class="content-container">
+                            <img src="photo/git-logo.png" alt="git" id="GIT" class="git-icon">
+                            <p></p>
+                        </div>
+                        <div class="content-container">
+                            <img src="photo/mysql-logo.png" alt="mysql" id="MySql" class="mysql-icon">
+                            <p></p>
+                        </div>
+                        <div class="content-container">
+                            <img src="photo/figma-logo.png" alt="figma" id="Figma" class="figma-icon">
+                            <p></p>
+                        </div>
 
                     </div>
                                    
