--- a/hangman-project/index.html
+++ b/hangman-project/index.html
@@ -17,7 +17,8 @@
 
 </head>
 <body>
-
+    
+    <div class="container">
     <div class="hangman-container">
 
         <div class="drawing rope"></div>
@@ -77,7 +78,8 @@
         <div class="alphabet-letter">Y</div>
         <div class="alphabet-letter">Z</div>
     </div>
-
+    
+</div> <!-- End of Container -->
     <!-- SCRIPT -->
     <script src="app.js"></script>
 </body>
