added weather project (unprotected API key)

--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
                     <ul class="article-list">
                         <li class="article-list-item"><a href="index.html" class="article-link" target="_blank">Personal website</a></li>
                         <li class="article-list-item"><a href="hangman-project/index.html" class="article-link" target="_blank">Hangman Game (JavaScript Project)</a></li>
+                        <li class="article-list-item"><a href="weather-project/index.html" class="article-link" target="_blank">Weather Application (JavaScript API Project)</a></li>
                         <li class="article-list-item"><a href="https://github.com/NikkiDilling/GUI-Retail-store-" class="article-link" target="_blank">GUI Retail Store Order Managment System</a></li>
                     </ul>
                 </div>
