need to fix article-coding slide (solution: add new class names)

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                             <p></p>
                         </div>
                     </div>
-                </div> end of slide container -> -->
+                </div> end of slide container > -->
             
             </article>
 
