added font-awesome btn icons

--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
 
     <!--stylesheet-->
     <link rel="stylesheet" href="style.css">
+    
+    <!-- FontAwesome Link-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <!-- Google Font-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,400;0,700;1,500&display=swap" rel="stylesheet">
-
 
     <title>Nikki Dilling-Hansen</title>
 
@@ -224,10 +226,10 @@
 
                         <div class="buttons-slide-container">
                             <div class="button">
-                                <button id="left" onclick="handleLeftClick()">left</button>
+                                <button id="left-btn" onclick="handleLeftClick()"><i class="fa-sharp fa-solid fa-caret-left"></i></button>
                             </div>
                             <div class="button">
-                                <button id="right" onclick="handleRightClick()">right</button>
+                                <button id="right-btn" onclick="handleRightClick()"><i class="fa-sharp fa-solid fa-caret-right"></i></button>
                             </div>
                         </div>
                 
