--- a/project-articles/GUI-project.html
+++ b/project-articles/GUI-project.html
@@ -47,9 +47,9 @@
         <div class="section section-3">
             <h3 class="section-title">Issues & Future Changes:</h3>
 
-            <h5 class="section-subtitle">Currency Transfer:</h5>
+            <h5 class="section-subtitle">Currency Conversion:</h5>
                 <p>
-                    It was my idea that the user can change the preferred currency at any time in the “account” menu. Although this functionality is implemented for transfers from dollars to any other currency, it still needs to be implemented for other currencies. For now, transferring for example from EUR to DKK will give an incorrect transfer.
+                    It was my idea that the user can change the preferred currency at any time in the “account” menu. Although this functionality is implemented for conversions from dollars to any other currency, it still needs to be implemented for other currencies. For now, conversionring for example from EUR to DKK will give an incorrect conversion.
                 </p>
 
                 <h5 class="section-subtitle">Jlist:</h5>
