started pixilating the style + changed header

--- a/index.html
+++ b/index.html
@@ -33,9 +33,10 @@
                 <img src="photo/me.jpg" alt="author's portrait" class="header-image">
 
                 <div class="header-title">
-                    <h1>Welcome to my page  </h1>
-                    <p>My name is <span> Nikki </span> - <span>Web</span> Developer from Denmark</p>
+                    <h1>Hey!</h1>
+                    <p>My name is <span> Nikki; </span> I'm a <span>Web Developer</span> from Denmark</p>
                 </div>
+
             </div>
             <!--
             <nav>
